# localization_evaluation_toolkit

./: .gitignore  .gitmodules  README.md
config/: .gitignore  ajust_time_stamp.yaml  evaluation.yaml  evaluation_pose.yaml  evaluation_twist.yaml  evalutaion_eagleye.yaml  read_ros2bag.yaml  results_compare_kota.yaml  results_compare_sasashima.yaml  sub_ndt_evaluation_compare.yaml
ros1/src/eve_util/: CMakeLists.txt  README.md  package.xml
ros1/src/eve_util/include/: csv.h
ros1/src/eve_util/src/: extract_within_lane.cpp
ros2/src/eve_util/: CMakeLists.txt  package.xml
ros2/src/eve_util/rviz/: trajectory_publisher.rviz
ros2/src/eve_util/src/: height_evaluator.cpp  scan2pcd.cpp  trajectory_publisher.cpp  trajectory_viewer.cpp
sample_data/: .gitkeep  reference.csv  result_trj_ekf.csv  result_trj_ndt.csv  result_trj_ndt_test.csv
sample_data/adjust_time_test_data/: offest.csv
sample_data/config/: compare_ekf_ndt.yaml  ekf_ndt.yaml  sasashima_evaluation.yaml
sample_data/output_sample/: sync_EKF_df.csv  sync_NDT_df.csv  sync_ref_df.csv  sync_reference_df.csv  sync_result_df.csv
sample_data/output_test/: sync_ref_df.csv  sync_result_df.csv
scripts/: main.py  pose_main.py  ros2bag_main.py  twist_main.py
scripts/deprecated/: adjust.py  plot.py  read_ros2bag.py  ros2bag_main.py  yaml_param.py
scripts/util/: adjust.py  configer.py  extract.py  packer.py  plot.py  plotter.py  read_ros2bag.py  yaml_param.py
scripts/util/pose/: configer.py  packer.py  plotter.py
scripts/util/twist/: configer.py  packer.py  plotter.py
src/: CMakeLists.txt  height_evaluator.cpp
sub_scripts/: 2d_kl.py  adjust_time_stamp.py  ani_convergence_viewer.py  autoware_play.py  conv_trj.py  convergence_viewer.py  eve_localization_evaluation.sh  height_plot.py  kl.py  reset.sh  ros1_extract_pose_with_cov.py  sub_eagleye_evaluation.py  sub_evaluation.py  sub_ndt_evaluation copy.py  sub_ndt_evaluation.py  sub_ndt_evaluation_compare.py  sub_ndt_evaluation_without_yawbias.py  sub_ndt_evaluation_without_yawbias_tmp.py  trajectory_viewer.sh
sub_scripts/develop/: ani_convergence_viewer.py  conv_trj.py  convergence_viewer.py  kl.py
sub_scripts/output_test/: after_time_offset.csv  sync_result_df.csv
sub_scripts/test_data/: target.csv
sub_scripts/util_eagleye/: preprocess.py
