<?xml version="1.0"?>
<package format="2">
    <name>eve_util</name>
    <version>1.0.0</version>
    <description>The lanelet package</description>
    <maintainer email="nozomu.ohashi@map4.jp">Nozomu-Ohashi</maintainer>
    <author>Nozomu-Ohashi</author>
    <license>NONE</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>lanelet2_parser</depend>

    <export>
    </export>
</package>
